tests/baselines/reference/renamingDestructuredPropertyInFunctionType.errors.txt
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(7,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(8,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(9,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(10,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(12,17): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(15,20): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(16,18): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(17,22): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(18,20): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(22,21): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(23,21): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(24,21): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(25,21): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(27,21): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(30,24): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(31,22): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(32,26): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(33,24): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(38,16): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(41,9): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts(44,13): error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?


==== tests/cases/compiler/renamingDestructuredPropertyInFunctionType.ts (21 errors) ====
    // GH#37454, GH#41044
    
    const sym = Symbol();
    
    type O = { a?: string; b: number; c: number; };
    type F1 = (arg: number) => any; // OK
    type F2 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F3 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F4 = ({ a: string }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F5 = ({ a: string, b, c }: O) => any; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F6 = ({ a: string }) => typeof string; // OK
    type F7 = ({ a: string, b: number }) => typeof number; // Error
                    ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F8 = ({ a, b: number }) => typeof number; // OK
    type F9 = ([a, b, c]) => void; // Error
    type F10 = ({ "a": string }) => void; // Error
                       ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F11 = ({ 2: string }) => void; // Error
                     ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F12 = ({ ["a"]: string }: O) => void; // Error
                         ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type F13 = ({ [2]: string }) => void; // Error
                       ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    // type F14 = ({ [sym]: string }) => void; // Error
    
    type G1 = new (arg: number) => any; // OK
    type G2 = new ({ a: string }: O) => any; // Error
                        ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G3 = new ({ a: string, b, c }: O) => any; // Error
                        ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G4 = new ({ a: string }: O) => any; // Error
                        ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G5 = new ({ a: string, b, c }: O) => any; // Error
                        ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G6 = new ({ a: string }) => typeof string; // OK
    type G7 = new ({ a: string, b: number }) => typeof number; // Error
                        ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G8 = new ({ a, b: number }) => typeof number; // OK
    type G9 = new ([a, b, c]) => void; // Error
    type G10 = new ({ "a": string }) => void; // Error
                           ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G11 = new ({ 2: string }) => void; // Error
                         ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G12 = new ({ ["a"]: string }: O) => void; // Error
                             ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    type G13 = new ({ [2]: string }) => void; // Error
                           ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    // type G14 = new ({ [sym]: string }) => void; // Error
    
    interface I {
      method1(arg: number): any; // OK
      method2({ a: string }): any; // Error
                   ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    
      (arg: number): any; // OK
      ({ a: string }): any; // Error
            ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    
      new (arg: number): any; // OK
      new ({ a: string }): any; // Error
                ~~~~~~
!!! error TS2842: Variable 'string' is not used. Did you mean to write a type annotation for whole object?
    }
    
    // Below are OK but renaming should be removed from declaration emit
    function f1({ a: string }: O) { }
    const f2 = function({ a: string }: O) { };
    const f3 = ({ a: string, b, c }: O) => { };
    const f4 = function({ a: string }: O): typeof string { return string; };
    const f5 = ({ a: string, b, c }: O): typeof string => '';
    const obj1 = {
      method({ a: string }: O) { }
    };
    const obj2 = {
      method({ a: string }: O): typeof string { return string; }
    };
    function f6({ a: string = "" }: O) { }
    const f7 = ({ a: string = "", b, c }: O) => { };
    const f8 = ({ "a": string }: O) => { };
    function f9 ({ 2: string }) { };
    function f10 ({ ["a"]: string }: O) { };
    const f11 =  ({ [2]: string }) => { };
    // const f12 =  ({ [sym]: string }) => { };
    
    // In below case `string` should be kept because it is used
    function f13({ a: string = "" }: O): typeof string { return "a"; }